# tightbinding

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md  commit
benches/: diamond_dos.rs
plot/: plot.py
src/: float.rs  lib.rs  model.rs  units.rs  vec_util.rs
src/dos/: dos.rs  mod.rs
src/fourier/: individual.rs  mod.rs
src/paths/: mod.rs
src/qe/: bands.rs  mod.rs  scf.rs
src/sample_models/: mod.rs  sc_nn.rs
src/tetra/: dos.rs  fermi.rs  grid.rs  mod.rs  sum.rs  weight.rs
src/w90/: mod.rs  model.rs
test_data/diamond/: README.md  scf.data-file.xml  test_diamond_dos.json
test_data/honeycomb_nn/: test_honeycomb_nn_dos.json
test_data/sc_nn/: test_sc_nn_dos.json
tests/: cubicnn.rs  diamond_model.rs  float.rs  fourier.rs  heusler_bands.rs  honeycomb_nn.rs  sc_nn.rs
tests/common/: mod.rs
tests/dos_util/: mod.rs
tests/sample_models/: honeycomb_nn.rs  mod.rs  sc_nn.rs
