[package]
name = "tightbinding"
version = "0.1.0"
authors = ["Tim Lovorn <tflovorn@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
error-chain = "0.10.0"
num-complex = "0.1.40"
ndarray = "0.9.1"
sxd-document = "=0.2.4"
sxd-xpath = "=0.4.1"
itertools = "0.6.1"
clap = "2.26.0"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0"
rayon = "0.8.2"

[dev-dependencies]
pre-commit = "0.5.2"
bencher = "0.1.4"

[dependencies.linxal]
version = "0.6.0"
default-features = false
features = ["netlib"]

[package.metadata.precommit]
fmt = "cargo fmt -- --check"
test = "cargo test 2>&1"

[[bin]]
name = "tb_w90_dos"
path = "src/bin/tb_w90_dos.rs"

[[bin]]
name = "dos_from_energies"
path = "src/bin/dos_from_energies.rs"

[[bench]]
name = "diamond_dos"
path = "benches/diamond_dos.rs"
harness = false
